#revision 1278
	ctapmex 25.01.2010 10:21
	1. переделал r1183 , т.к. оказалось, что хелп pcolorer2 не соответсвовал описанию в ParserFactory.h
		но так же учитываем, что HOMEPATH в Windows не содержит имя диска
		итого, сейчас следующий порядок поиска
		для Windows 
		- Каталог с dll плагина, на уровень выше, на два уровня выше.
		- %COLORER5CATALOG%
		- %HOMEDRIVE%%HOMEPATH%\.colorer5catalog
		- %SYSTEMROOT%/.colorer5catalog (или %WINDIR% в w9x)
		для nix 
		- $COLORER5CATALOG
		- $HOME\.colorer5catalog
		- $HOMEPATH/.colorer5catalog
		- /usr/share/colorer/catalog.xml
		- /usr/local/share/colorer/catalog.xml	
	2. изменения отражены в хелпе

#revision 1273
	ctapmex 18.01.2010 15:03
	1. исправим умолчание в proto.hrc  - use GNU make only = false , иначе мейки от VC отображаются коряво
	2. исправим в proto.hrc вес для plain text , иначе, например xml файлы по содержанию, но по имени похожем
		на install*.* отображаются как plain text

#revision 1268
	ctapmex 17.01.2010 15:29
	1. поправлена схема assa.hrc. Но нужны доп. правки. описание в todo.txt, а примеры в папке test

#revision 1267
	ctapmex 16.01.2010 17:58
	1. переделана функция rGetValueSz. вызывается по другому, предыдущая содержала возможную утечку памяти
	2. косметика - в файлах плагина pcolorer2 заменен null на NULL . 

#revision 1264
	ctapmex 15.01.2010 12:20
	1. изменил размеры и положение некоторых элементов в окне настроек
	2. устанавливаем версию плагина в 1.0.2.3 и собираем релиз
	3. обновление языковых файлов и файлов помощи 
	4. обновление истории изменения FarColor	

#revision 1263
	ctapmex 15.01.2010 11:54
	1. критическая ошибка, возникала на части копьютеров
		я понимаю, что сглупил, но вот проявление этой ошибки интересное
		http://forum.vingrad.ru/forum/topic-287378.html

#revision 1262
	ctapmex 15.01.2010 10:48
	1. исправление дублирующих имен переменных
	2. ошибка доступа к памяти при сохранении параметров при первом запуске фара

#revision 1257
	ctapmex 14.01.2010 10:28